[package]
name = "jyowo-harness-provider-state"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_provider_state"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
jyowo-harness-contracts = { path = "../jyowo-harness-contracts" }
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
