[package]
name = "jyowo-harness-session"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_session"
doctest = false

[lints]
workspace = true

[features]
default = []
workspace-bootstrap = []
hot-reload-fork = []
steering = []

[dependencies]
jyowo-harness-contracts = { path = "../jyowo-harness-contracts" }
jyowo-harness-context = { path = "../jyowo-harness-context" }
jyowo-harness-hook = { path = "../jyowo-harness-hook" }
jyowo-harness-journal = { path = "../jyowo-harness-journal" }
jyowo-harness-mcp = { path = "../jyowo-harness-mcp" }
jyowo-harness-memory = { path = "../jyowo-harness-memory" }
jyowo-harness-model = { path = "../jyowo-harness-model" }
jyowo-harness-permission = { path = "../jyowo-harness-permission" }
jyowo-harness-sandbox = { path = "../jyowo-harness-sandbox" }
jyowo-harness-skill = { path = "../jyowo-harness-skill" }
jyowo-harness-tool = { path = "../jyowo-harness-tool" }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
parking_lot = "0.12.5"

[dev-dependencies]
tempfile = { workspace = true }
jyowo-harness-journal = { path = "../jyowo-harness-journal", features = ["in-memory"] }
