[package]
name = "jyowo-harness-skill"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_skill"
doctest = false

[lints]
workspace = true

[features]
default = ["workspace-source", "user-source", "threat-scanner"]
workspace-source = []
user-source = []
plugin-source = []
mcp-source = []
threat-scanner = ["jyowo-harness-memory/threat-scanner"]

[dependencies]
jyowo-harness-contracts = { path = "../jyowo-harness-contracts" }
jyowo-harness-memory = { path = "../jyowo-harness-memory" }
async-trait = { workspace = true }
blake3 = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
yaml-rust2 = { workspace = true }
parking_lot = "0.12.5"
