[package]
name = "jyowo-harness-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_tool"
doctest = false

[lints]
workspace = true

[features]
default = ["builtin-toolset"]
skill-tools = []
builtin-toolset = ["jyowo-harness-permission/dangerous"]
programmatic-tool-calling = ["builtin-toolset", "jyowo-harness-sandbox/code-runtime"]
minimax-tools = [
  "builtin-toolset",
  "dep:base64",
  "dep:jyowo-harness-model",
  "dep:reqwest",
  "dep:secrecy",
  "jyowo-harness-model/minimax",
]
gemini-tools = [
  "builtin-toolset",
  "dep:base64",
  "dep:jyowo-harness-model",
  "dep:reqwest",
  "dep:secrecy",
  "jyowo-harness-model/gemini",
]
seedance-tools = [
  "builtin-toolset",
  "dep:base64",
  "dep:jyowo-harness-model",
  "dep:reqwest",
  "jyowo-harness-model/doubao",
]

[dependencies]
jyowo-harness-contracts = { path = "../jyowo-harness-contracts" }
jyowo-harness-model = { path = "../jyowo-harness-model", optional = true }
jyowo-harness-permission = { path = "../jyowo-harness-permission" }
jyowo-harness-sandbox = { path = "../jyowo-harness-sandbox" }
async-trait = { workspace = true }
base64 = { workspace = true, optional = true }
blake3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
globset = { workspace = true }
jsonschema = { workspace = true }
parking_lot = "0.12.5"
regex = { workspace = true }
reqwest = { workspace = true, optional = true }
ring = { workspace = true }
schemars = { workspace = true }
secrecy = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
jyowo-harness-execution = { path = "../jyowo-harness-execution" }
tempfile = { workspace = true }
wiremock = "0.6.5"
