[package]
name = "jyowo-desktop-shell"
version.workspace = true
description = "Jyowo desktop shell"
authors = ["Jyowo"]
license.workspace = true
repository = ""
edition.workspace = true
rust-version.workspace = true
default-run = "jyowo-desktop-shell"

[lib]
name = "jyowo_desktop_shell"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
iana-time-zone = { workspace = true }
image = { workspace = true }
async-trait = { workspace = true }
jyowo-harness-contracts = { path = "../../../crates/jyowo-harness-contracts" }
jyowo-harness-execution = { path = "../../../crates/jyowo-harness-execution" }
jyowo-harness-observability = { path = "../../../crates/jyowo-harness-observability" }
jyowo-harness-permission = { path = "../../../crates/jyowo-harness-permission", features = ["integrity"] }
jyowo-harness-plugin = { path = "../../../crates/jyowo-harness-plugin" }
jyowo-harness-sandbox = { path = "../../../crates/jyowo-harness-sandbox", features = ["local-sandbox"] }
jyowo-harness-sdk = { path = "../../../crates/jyowo-harness-sdk", default-features = false, features = ["stream-permission", "rule-engine-permission", "integrity", "jsonl-store", "sqlite-store", "blob-file", "local-sandbox", "mcp-http", "mcp-stdio", "memory-external-slot", "provider-anthropic", "provider-codex", "provider-deepseek", "provider-doubao", "provider-gemini", "provider-km", "provider-local-llama", "provider-minimax", "minimax-tools", "seedance-tools", "provider-openai", "provider-openrouter", "provider-qwen", "provider-zhipu", "observability-redactor", "agents-subagent", "agents-team"] }
jyowo-harness-model = { path = "../../../crates/jyowo-harness-model", features = ["openrouter", "deepseek"] }
jyowo-harness-tool = { path = "../../../crates/jyowo-harness-tool", default-features = false, features = ["builtin-toolset", "minimax-tools", "seedance-tools"] }
log = { workspace = true }
parking_lot = "0.12.5"
oxideav-avif = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true, features = [] }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-store = { workspace = true }
tauri-plugin-updater = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "signal"] }
uuid = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
jyowo-harness-execution = { path = "../../../crates/jyowo-harness-execution" }
jyowo-harness-journal = { path = "../../../crates/jyowo-harness-journal", features = ["in-memory"] }
jyowo-harness-permission = { path = "../../../crates/jyowo-harness-permission", features = ["integrity"] }
jyowo-harness-sdk = { path = "../../../crates/jyowo-harness-sdk", default-features = false, features = ["stream-permission", "rule-engine-permission", "integrity", "jsonl-store", "sqlite-store", "blob-file", "local-sandbox", "mcp-http", "mcp-stdio", "memory-external-slot", "provider-anthropic", "provider-codex", "provider-deepseek", "provider-doubao", "provider-gemini", "provider-km", "provider-local-llama", "provider-minimax", "minimax-tools", "seedance-tools", "provider-openai", "provider-openrouter", "provider-qwen", "provider-zhipu", "observability-redactor", "agents-subagent", "agents-team", "testing"] }
harness-skill = { package = "jyowo-harness-skill", path = "../../../crates/jyowo-harness-skill" }
jyowo-harness-model = { path = "../../../crates/jyowo-harness-model", features = ["openrouter", "deepseek"] }
rusqlite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
wiremock = "0.6.5"

[lints]
workspace = true

[features]
auto-mode = []
